--- a/02-bases/src/app/heroes/hero/hero.component.html
+++ b/02-bases/src/app/heroes/hero/hero.component.html
@@ -17,11 +17,23 @@
 </dl>
 
 
-<button class="btn btn-primary mx-2">
+<button
+*ngIf="name !== 'Spiderman' "
+(click)="changeHero()" class="btn btn-primary mx-2">
  Cambiar nombre
 </button>
 
-<button class="btn btn-primary">
-  Cambiar edad
- </button>
+<button
+*ngIf="age !== 34"
+(click)="changeAge()"  class="btn btn-primary mx-2">
+ Cambiar edad
+</button>
+
+<button
+(click)="resetForm()"
+class="btn btn-primary">
+Reset
+</button>
+
+
 
