--- a/02-bases/src/app/heroes/list/list.component.html
+++ b/02-bases/src/app/heroes/list/list.component.html
@@ -1,1 +1,31 @@
-<p>list works!</p>
+<h3> Listado de Heroes </h3>
+
+
+
+<div *ngIf="deleterHero; else nothingWasDeleted">
+<h3>heroe borado <small class="text-danger">{{deleterHero}}</small> </h3>
+</div>
+
+
+<ng-template #nothingWasDeleted>
+ <h3>No ha borrado nada</h3>
+</ng-template>
+
+
+<button
+  *ngIf="heroNames.length >0"
+  (click)="removeLastHero()"
+  class="btn btn-outline-danger">
+  borrar ultimo heroe
+</button>
+
+
+
+
+
+<ul class="mt-2 list-group">
+  <li *ngFor="let name of heroNames"
+      class="list-group-item">
+      {{name}}
+  </li>
+  </ul>
