dbz-list-component

--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -1,1 +1,34 @@
-<h1>dbz main page</h1>
+<h1>DB Personajes</h1>
+
+<hr>
+
+<div class="row">
+  <div class="col">
+
+    <app-dbz-list></app-dbz-list>
+
+
+  </div>
+
+  <div class="col">
+<!--
+    <app-add-character></app-add-character> -->
+
+    <h4>Agregar Personaje</h4>
+
+    <form class="row">
+
+      <input type="text" class="form-control mb-2 " placeholder="Nombre">
+
+      <input type="text" class="form-control mb-2" placeholder="Poder">
+
+      <button type="submit" class="btn btn-primary">
+        Agregar
+      </button>
+
+    </form>
+
+  </div>
+
+</div>
+
