--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -11,22 +11,8 @@
   </div>
 
   <div class="col">
-<!--
-    <app-add-character></app-add-character> -->
 
-    <h4>Agregar Personaje</h4>
-
-    <form class="row">
-
-      <input type="text" class="form-control mb-2 " placeholder="Nombre">
-
-      <input type="text" class="form-control mb-2" placeholder="Poder">
-
-      <button type="submit" class="btn btn-primary">
-        Agregar
-      </button>
-
-    </form>
+    <app-add-character></app-add-character>
 
   </div>
 
