--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -5,12 +5,14 @@
 <div class="row">
   <div class="col">
 
-    <app-dbz-list></app-dbz-list>
+    <app-dbz-list [characterList]="characters"></app-dbz-list>
 
 
   </div>
 
   <div class="col">
+
+
 
     <app-add-character></app-add-character>
 
