--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -14,7 +14,7 @@
 
 
 
-    <app-add-character></app-add-character>
+    <app-add-character (onNewCharacter)="onNewCharacter($event)"></app-add-character>
 
   </div>
 
