--- a/02-bases/src/app/dbz/components/list/list.component.html
+++ b/02-bases/src/app/dbz/components/list/list.component.html
@@ -1,8 +1,9 @@
 <h4>Listado</h4>
-  <ul class="list-group">
-    <li *ngFor="let character of characterList;
+<ul class="list-group">
+  <li *ngFor="
+    let character of characterList;
     let i = index;
-    let isFirt = first;
+    let isFirst = first;
     let isLast = last;
     let isEven = even;
     let isOdd = odd;
@@ -14,16 +15,16 @@
     }">
 
     <div>
-      <span class=" text-primary">{{i+1}}.</span>
-      <span>{{character.name}} - </span>
-      <strong>Power :</strong>
-      <span>{{character.power}}</span>
-      <button (click)="onDeleteCharacter(i)" class="btn btn-danger "> X </button>
-
+        <span class="text-primary"> {{ i + 1 }}. </span>
+        <span>{{ character.name }} - </span>
+        <strong>Power: </strong>
+        <span>{{ character.power }}</span>
     </div>
 
+    <button (click)="onDeleteCharacter(i)" class="btn btn-danger "> X </button>
+    <!-- <button (click)="onDeleteCharacter( character.id )" class="btn btn-danger">X</button> -->
 
   </li>
+</ul>
 
-  </ul>
 
