--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -5,8 +5,8 @@
 <div class="row">
   <div class="col">
 
-    <app-dbz-list [characterList]="dbzService.characters"
-                  (onDelete)="dbzService.onDeleteCharacter($event)"></app-dbz-list>
+    <app-dbz-list [characterList]="characters"
+                  (onDelete)="onDeleteCharacter($event)"></app-dbz-list>
 
 
   </div>
@@ -15,7 +15,7 @@
 
 
 
-    <app-add-character (onNewCharacter)="dbzService.onNewCharacter($event)"></app-add-character>
+    <app-add-character (onNewCharacter)="onNewCharacter($event)"></app-add-character>
 
   </div>
 
