--- a/03-gifs-app/src/app/app.component.html
+++ b/03-gifs-app/src/app/app.component.html
@@ -5,10 +5,9 @@
 
   <shared-sidebar></shared-sidebar>
 
+     <!-- home page -->
 
-
-
-  <!-- Home Page -->
+  <gifs-home-page class="flex-fill"></gifs-home-page>
 
 
 </div>
