--- a/03-gifs-app/src/app/gifs/pages/home/home-page.component.html
+++ b/03-gifs-app/src/app/gifs/pages/home/home-page.component.html
@@ -9,12 +9,9 @@
  <div class="col-12 pt-2">
   <!-- listado de Gifs -->
        <!-- card list -->
-  <ul>
-    <li>Primero</li>
-    <li>Segundo</li>
-    <li>Tercero</li>
-    <li>Cuarto</li>
-  </ul>
+
+<gifs-card-list></gifs-card-list>
+
  </div>
 
 </div>
